# Celestis-Tokenizers

./: .gitignore
Branchless-C/: CMakeLists.txt
Branchless-C/include/: processDirectory.hpp  tokenizer.hpp
Branchless-C/src/: main.c  processDirectory.c  tokenizer.c
Tokenizer-C/: CMakeLists.txt
Tokenizer-C/include/: processDirectory.hpp  tokenizer.hpp
Tokenizer-C/src/: main.c  processDirectory.c  tokenizer.c
Tokenizer-Python/src/: file_processor.py  main.py  tokenizer.py
Tokenizer-cpp/: CMakeLists.txt
Tokenizer-cpp/include/: tokenizer.hpp
Tokenizer-cpp/src/: main.cpp  tokenizer.cpp
input/: file1.txt  file2.txt
input/subfolder/: file3.txt
